--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,15 @@ pre {
   padding: 8px;
   border-radius: 8px;
 }
+
+.descriptions {
+  width: 60%;
+}
+
+.parameters {
+  width: 20%;
+}
+
+.values {
+  width: 20%;
+}
